<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".AccessActivity">

    <TextView
        android:text="@string/test_mem_tip"
        android:layout_width="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/access_single_test_btn"
        android:text="@string/access_single_test"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/access_multi_test_btn"
        android:text="@string/access_multi_test"
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" />
</LinearLayout>