<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingleTestActivity">

    <FrameLayout
        android:id="@+id/mount_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#446200EE"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <TextView
        android:id="@+id/statistic_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="160dp"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbarFadeDuration="1000"
        android:scrollbars="vertical" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/mount_flutter_view_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mount_flutter_view"
            android:textSize="12sp" />

        <Button
            android:id="@+id/mount_kraken_view_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/mount_kraken_view"
            android:textSize="12sp" />

        <Button
            android:id="@+id/native_call_cross_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/native_call_cross_view"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="13sp" />

        <Button
            android:id="@+id/router_to_flutter_page_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/router_to_flutter_page"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>